--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
 	"files.associations": {
 		"*.c": "c",
-		"minishell.h": "c"
+		"minishell.h": "c",
+		"compare": "c",
+		"type_traits": "c"
 	}
 }
