fix leaks cd / pipe

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,17 @@
                     "description": "Enable pretty-printing for gdb",
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": false
-                }
+                },
+                {
+                    "description": "Set follow fork mode to child",
+                    "text": "-gdb-set follow-fork-mode child",
+                    "ignoreFailures": true
+                },
+                // {
+                // 	"description": "Set follow fork mode to parent",
+                // 	"text": "-gdb-set follow-fork-mode parent",
+                // 	"ignoreFailures": true
+                // },
             ],
             "preLaunchTask": "make",
             "miDebuggerPath": "/usr/bin/gdb",
